# TGScanner

./: .gitignore  README.md  check.py  create_shortcut.ps1  find_magazine.py  find_toi.py  launch_toi_gui.bat  openai_compat.py  pyproject.toml  telegram_links.py  test_extraction.py  test_find_magazine_json.py  test_find_magazine_recency.py  test_openai_compat.py  test_telegram_links.py  test_toi_gui_stop.py  test_toi_matcher.py  toi_gui.py
docs/plans/: 2026-07-21-001-feat-openai-compatible-ai-plan.md
