[project]
name = "telegramtoi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
    "telethon>=1.42.0",
    "google-genai>=0.1.0",
    "customtkinter>=5.2.2",
    "langdetect>=1.0.9",
    "pycryptodome>=3.23.0",
]
